@startuml
'https://plantuml.com/class-diagram

class Car {
    - String _id;
    - String _model;
    - String _brand;
    + Car(String id, String model, String brand)
    + String getId()
    + String getModel()
    + String getBrand()
}
class CarRepository{
    - List<Car> _cars;
    + List<Car> getCarsFromDb()
    + Car getFromDb(final String carId)
}
class CarCatalogue{
    - final CarRepository _carRepository;
    + CarCatalogue(CarRepository carRepository)
    + String getCarsNames()
}
class CarComparator{
    - final CarRepository _carRepository;
    + CarComparator(CarRepository carRepository)
    + Car getBestCar()
}
CarCatalogue ..> CarRepository :use
CarComparator ..> CarRepository :use
@enduml